crates/rtlscope-cli/tests/snapshots/yosys_golden__a_disagreement_names_what_each_side_said.snap
---
source: crates/rtlscope-cli/tests/yosys_golden.rs
expression: "rtlscope_cli::cmd::yosys::check_text(&report)"
---
Yosys 0.66 (git sha1 7f8fdfd8d7bc08c749a2a969388d3425d4f369d5, x86_64-w64-mingw32-g++ 16.1.0 -march=nocona -msahf -mtune=generic -O2 -fstack-protector-strong -O3)

4 module(s) compared, 60 fact(s) checked

2 disagreement(s)
  hier_top             width      result                   here 32 bit(s)          netlist 16 bit(s)
  hier_top             instance   u_ctrl                   here hier_ctrl          netlist —

  hier_alu                   10 fact(s)  agree        tests/fixtures/hier.sv:4.1-22.10
  hier_ctrl                   9 fact(s)  agree        tests/fixtures/hier.sv:47.1-61.10
  hier_regfile               15 fact(s)  agree        tests/fixtures/hier.sv:24.1-45.10
  hier_top                   25 fact(s)  2 differ     tests/fixtures/hier.sv:63.1-98.10

1 thing(s) could not be compared
  `hier_regfile`: 1 memor(y/ies) are nets here and live outside `netnames` in the netlist, so they were not compared
